# epost

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  TODO.md  Taskfile.yml  devenv.nix  flake.nix
dev/: browser-stub  config.toml  msmtp-stub
dev/fixtures/: broken.html  cid-image.html  remote-image.html  welcome.html
dev/maildir/: README.md
dev/maildir-fs/: README.md
dev/maildir-fs/Sent/cur/: 1779210000.M0P1.epost-fs:2,S
dev/maildir-verbatim/: README.md
dev/maildir-verbatim/Archive/cur/: 1779220000.M0P1.epost-fs:2,S
dev/maildir-verbatim/cur/: 1779200000.M0P1.epost-fs:2,S
dev/maildir-work/: README.md
dev/maildir-work/cur/: 1779200400.M0W1.epost-work:2,S  1779207600.M0W2.epost-work:2,S
dev/maildir-work/new/: 1779238800.M0W3.epost-work
dev/maildir/cur/: 1779010200.M0P3.epost-dev:2,S  1779027600.M0P4.epost-dev:2,S  1779093600.M0P5.epost-dev:2,S  1779105600.M0P2.epost-dev:2,S  1779181200.M0P1.epost-dev:2,S  1779192000.M0P8.epost-dev:2,S  1779195600.M0P9.epost-dev:2,S  1779199200.M0P10.epost-dev:2,S  1779200000.M0P11.epost-dev:2,S  1779264000.M0P9.epost-dev:2,S  1780575300.M0P100.epost-dev:2,
dev/maildir/new/: 1778850000.M0P6.epost-dev
src/: config.rs  mail.rs  main.rs  store.rs  ui.rs
src/mail/: addressbook.rs  addressbook_external.rs  compose.rs  flags.rs  html.rs  layout.rs  parse.rs  text.rs
src/mail/snapshots/: epost__mail__html__tests__broken.snap  epost__mail__html__tests__cid_image.snap  epost__mail__html__tests__remote_image.snap  epost__mail__html__tests__welcome.snap
src/store/: index.rs  scan.rs  sync.rs  thread.rs  watch.rs
src/ui/: accounts.rs  address_complete.rs  app.rs  browser.rs  clipboard.rs  cmdline.rs  compose.rs  compose_body.rs  compose_header.rs  embed.rs  events.rs  folders.rs  images.rs  keys.rs  list.rs  motion.rs  mouse.rs  reader.rs  search.rs  style.rs  tabs.rs  text_input.rs  textobj.rs  tty.rs  words.rs
(+3 files in other folders)
