[package]
name = "epost"
version = "0.0.1"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
ratatui = "0.30.0"
crossterm = "0.29.0"
rusqlite = { version = "0.40.0", features = ["bundled"] }
mail-parser = "0.11.3"
mail-builder = "0.4"
html5ever = "0.39"
markup5ever_rcdom = "0.39"
tempfile = "3"
ratatui-image = { version = "11.0.2", default-features = false, features = ["crossterm", "image-defaults"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
base64 = "0.22"
tui-term = "0.3.4"
portable-pty = "0.9.0"
vt100 = "0.16.2"
notify = "8"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
